--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,5 +1,5 @@
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
-execution.default.webUi.timeCapsuleEnabled=false
+execution.default.webUi.timeCapsuleEnabled=true
 execution.default.webUi.enablePageLoadTimeout=false
 execution.default.webUi.pageLoadTimeout=30
 execution.default.webUi.ignorePageLoadTimeOutException=false
